--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
+  dio: ^5.8.0+1
 
 dev_dependencies:
   flutter_test:
