--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
   dio: ^5.8.0+1
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_test:
