--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   json_annotation: ^4.9.0
   dio: ^5.8.0+1
   get_it: ^8.0.3
+  equatable: ^2.0.7
+  flutter_bloc: ^9.0.0
 
 dev_dependencies:
   flutter_test:
