--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   get_it: ^8.0.3
   equatable: ^2.0.7
   flutter_bloc: ^9.0.0
+  flutter_material_design_icons: ^1.1.7447
 
 dev_dependencies:
   flutter_test:
