--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_bloc: ^9.0.0
   flutter_material_design_icons: ^1.1.7447
   currency_formatter: ^2.2.2
+  custom_sliding_segmented_control: ^1.8.5
 
 dev_dependencies:
   flutter_test:
