--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_material_design_icons: ^1.1.7447
   currency_formatter: ^2.2.2
   custom_sliding_segmented_control: ^1.8.5
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
