--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   carousel_slider: ^5.0.0
   cached_network_image: ^3.4.1
   shimmer: ^3.0.0
+  expandable_page_view: ^1.0.17
 
 dev_dependencies:
   flutter_test:
